--- a/angular/src/app/login/login.component.css
+++ b/angular/src/app/login/login.component.css
@@ -1,20 +1,35 @@
+.tldContainer {
+    width: 100%;
+    height: 100%;
+}
+
 .mainDiv {
     margin: auto;
-    width: 900px;
-    height: 900px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-h1 {
+.title {
     color: white;
     font-size: 60px;
     padding: 10px;
     margin: auto;
-    position: absolute;
-    top: 20%;
-    left: 35%;
+    width: 100%;
 }
+
+.titleHolder {
+  width: 100%;
+  height: 33%;
+  text-align: center;
+  vertical-align: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 mat-card {
     background-color: black;
     max-width: 700px;
@@ -34,7 +49,7 @@ mat-card {
 }
 
 .forgot-password {
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .email-input {
